<resources>
    <string name="app_name">EXAM APP</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="name">Enter your name</string>
    <string name="address">Enter your address</string>
    <string name="phone">Enter your phone</string>
    <string name="birth_date">Enter your birth date</string>
    <string name="home_country">Choose your home country</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter a password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Choose your gender</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="home_title">My Profile</string>
    <string name="result_form_title">Confirmation</string>
    <string name="gallery_title">Pictures</string>

    <string name="action_back">BACK</string>
    <string name="action_next">NEXT</string>
    <string name="action_clean_form">CLEAN</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_exit">Exit</string>

    <string name="welcome">"Welcome "</string>

    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="preference_file_key">"preference file key"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Pictures</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_internet">Internet</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_form">Information</string>

    <string name="gps_title">Your location</string>
    <string name="form_title">Information</string>

    <string name="menu_anterior">Regresar</string>
    <string name="menu_salir">Salir</string>

    <string name="btnsalir">Salir</string>
    <string name="btnsiguiente">Siguiente</string>

    <string name="gps_btn_see_map">SEE MAP</string>

    <string-array name="countries_array">
        <item>Colombia</item>
        <item>Mexico</item>
        <item>Brazil</item>
        <item>Argentina</item>
        <item>The United States</item>
        <item>France</item>
        <item>Belgium</item>
        <item>Germany</item>
        <item>Spain</item>
        <item>Canada</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="siguiente">Siguiente</string>
    <string name="atras">ATras</string>
    <string name="todo1">uno</string>
    <string name="imagenes">Imagenes</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="tomar_foto_y_visualiza">TOMAR FOTO Y VISUALIZA</string>
    <string name="todo">TODO</string>
    <string name="open_camera">open camera</string>


    <string name="author_one">Juan Camilo Velandia Botello</string>
    <string name="author_two">Arantza Reveles Nieto</string>
    <string name="author_three">Juan Jose Hernandez Arreola</string>
    <string name="professor">Rocio Elizabeth Pulido Alba</string>
    <string name="title_activity_maps">Map</string>

</resources>
