<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_always_landscape_portrait"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_internet"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_internet" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_gps" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_credits" />
    </group>

</menu>
