<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.home.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.myapplication.ui.home.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_internet"
        android:name="com.example.myapplication.ui.home.ui.internet.InternetFragment"
        android:label="@string/menu_internet"
        tools:layout="@layout/fragment_internet" />

    <fragment
        android:id="@+id/nav_gps"
        android:name="com.example.myapplication.ui.home.ui.gps.GpsFragment"
        android:label="@string/menu_gps"
        tools:layout="@layout/fragment_gps" />

    <fragment
        android:id="@+id/nav_credits"
        android:name="com.example.myapplication.ui.home.ui.credits.CreditsFragment"
        android:label="@string/menu_internet"
        tools:layout="@layout/fragment_credits" />
</navigation>