<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.credits.CreditsActivity">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Members:"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/credits_author_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_two"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/credits_author_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_three"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/credits_lbl_profesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Professor:"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/credits_professor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professor"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/credits_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:text="@string/menu_credits"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="Copyright©2020"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="298dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <Button
            android:id="@+id/credits_btn_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_back" />

        <Button
            android:id="@+id/credits_btn_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_next" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>