<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txt_gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="388dp"
            android:layout_height="102dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="375dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/img1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="225dp"
                android:layout_height="101dp"
                android:layout_weight="1"
                android:src="@drawable/img4" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="207dp"
                android:layout_height="101dp"
                android:layout_weight="1"
                android:src="@drawable/img2"
                android:contentDescription="@string/todo1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="212dp"
                android:layout_height="105dp"
                android:layout_weight="1"
                android:src="@drawable/img3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="157dp"
            android:layout_height="218dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="139dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="141dp"
                android:layout_height="113dp"
                android:contentDescription="@string/todo1"
                android:src="@drawable/img5" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="145dp"
                android:layout_height="88dp"
                android:src="@drawable/img6"
                android:contentDescription="@string/todo2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btnsig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btnsiguiente"
                android:text="@string/action_next" />

            <Button
                android:id="@+id/gallery_btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btnsalir"
                android:text="@string/action_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="223dp"
            android:layout_height="228dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="48dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="235dp"
                android:layout_height="129dp"
                android:src="@drawable/img8"
                android:contentDescription="@string/todo3" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img7"
                android:contentDescription="@string/todo5" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="139dp"
            android:layout_marginLeft="139dp"
            android:layout_marginTop="32dp"
            android:text="@string/gallery_title"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="191dp"
            android:layout_height="156dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="38dp"
            android:contentDescription="@string/todo4"
            android:src="@drawable/cat"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.32999998" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>